fixed squashed sidebar images

--- a/app/assets/stylesheets/blog_entries.css.scss
+++ b/app/assets/stylesheets/blog_entries.css.scss
@@ -275,7 +275,7 @@ h5.blog-placeholder{
     z-index: 1000000;
   }
   .sidebar-social-buttons div img{
-    width: 50px;
+    width: 220%;
   }
   .sidebar-social-button-image{
     margin-top: 53px;
